# mqquant-research-engine

./: .gitignore  AGENTS.md  BASELINE.md  HANDOFF.md  LATEST_HANDOFF.md  README.md  run_all_pipeline.cmd  run_all_pipeline.ps1  run_all_tests.cmd  run_gui.cmd  run_gui.ps1
v2/: README.md  pyproject.toml
v2/data/samples/: trades.sample.csv
v2/docs/: IMPLEMENTATION_PHASE1_PLAN.md
v2/tests/: test_oos_runner.py
v2/tests/automation/: test_auto_research.py
v2/tests/backtest/: test_costs.py  test_generated_strategy.py  test_simple_m1_strategy.py  test_trade_export.py
v2/tests/cli/: test_auto_promotion_cli.py  test_auto_research_cli.py  test_backtest_m1_cli.py  test_generate_decision_audit_cli.py  test_run_l1_l4_pipeline.py  test_run_latest_pipeline.py  test_run_strategy_search_cli.py  test_wfo_txt_cli.py
v2/tests/decision/: test_artifact_decision.py  test_audit_log.py  test_promotion_pipeline.py  test_recommendation.py
v2/tests/export/: test_artifact_exporter.py
v2/tests/forward/: test_forward_evaluator.py  test_forward_log.py  test_forward_performance.py
v2/tests/gui/: test_wfo_app.py
v2/tests/io/: test_m1_parser.py  test_txt_parser.py
v2/tests/jobs/: test_job_manager.py
v2/tests/optimizer/: test_parameter_grid.py  test_xs_batch.py  test_xs_template.py
v2/tests/pipeline/: test_txt_wfo_pipeline.py
v2/tests/reporting/: test_report_schema.py  test_wfo_report.py
v2/tests/runs/: test_run_manager.py  test_run_pipeline.py  test_run_txt_validator.py  test_run_xs_batch.py  test_strategy_detail.py  test_weekly_series.py
v2/tests/strategy/: test_registry.py  (+6 more)
(+424 files in other folders)
