[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mqquant-research-engine-v2"
version = "0.1.0"
description = "v2 research engine scaffold (placeholder stage)"
requires-python = ">=3.11"
dependencies = [
  "pandas>=2.2",
  "pydantic>=2.0",
  "PyYAML>=6.0",
  "typer>=0.12",
]
