[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mqre-v2"
version = "0.1.0"
description = "mqquant v2 research engine scaffold"
requires-python = ">=3.11"
dependencies = [
  "pandas",
  "pydantic",
  "PyYAML",
  "typer",
]

[project.optional-dependencies]
dev = [
  "pytest",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
